src/styles/blocks/nav.css
.nav {
  vertical-align: top;
  line-height: 40px;

  @media (max-width: 860px) {
    position: fixed;
    z-index: 10;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 20px 0 0;
    opacity: 0;
    background-color: #fff;
    text-align: center;
    visibility: hidden;
    transition: opacity 0.2s ease, visibility 0.2s ease;
    will-change: opacity;

    &.open {
       opacity: 0.9;
       visibility: visible;
    }
  }

  @media screen and (min-width: 860px) {
    display: inline-block;
  }


  &__link {
    display: inline-block;
    margin-right: 16px;
    font-size: 12px;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    cursor: pointer;
  }

  ul li:last-child a {
    margin-right: 0;
  }

  &__link_active {
    color: #4880ed;
  }

  ul {
    list-style: none;

    li {
      display: inline-block;

      @media screen and (max-width: 860px) {
        display: block;
        text-align: center;
        margin: 0 auto;
      }
    }
  }
}

@media screen and (max-width: 860px) {
  .nav a[href="/divisions.html"] {
    display: none;
  }
}

